Some bugs solved - feasability not conserved by newton and backtracking

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -44,10 +44,10 @@
     }
    ],
    "source": [
-    "function generate_data(n1,n2, d=2)\n",
+    "function generate_data(n1, n2, d=2)\n",
     "    # Returns 2 clouds of labelled Gaussian data of dim 2 with different moments\n",
-    "    model1 = MvNormal(-ones(d), .5*eye(d))\n",
-    "    model2 = MvNormal(ones(d), .5*eye(d))\n",
+    "    model1 = MvNormal(-ones(d), .5 * eye(d))\n",
+    "    model2 = MvNormal(ones(d), .5 * eye(d))\n",
     "    samples1 = rand(model1, n1)\n",
     "    samples2 = rand(model2, n2)\n",
     "    X = DataFrame([transpose(samples1); transpose(samples2)])\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
        "transform_svm_primal (generic function with 2 methods)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
        "transform_svm_dual (generic function with 2 methods)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
        "backtracking (generic function with 1 method)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,11 +159,11 @@
     "function backtracking(x, t, dx, f, nabla)\n",
     "    alpha = .25 \n",
     "    beta = .5\n",
-    "    res = 1\n",
-    "    while minimum(x + res*dx) < 1\n",
+    "    res = 0.1\n",
+    "    while minimum(x + res*dx) < 10^(-3.)\n",
     "        res *= beta\n",
     "    end\n",
-    "    while  f(x+res*dx, t) - f(x,t) + (alpha * res*transpose(nabla)*dx)[1] > 0.\n",
+    "    while  f(x+res*dx, t) >= f(x,t) + (alpha * res*transpose(nabla)*dx)[1]\n",
     "        res *= beta\n",
     "    end\n",
     "    return res\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -184,7 +184,7 @@
        "centering_step (generic function with 3 methods)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,12 +202,18 @@
     "    end\n",
     "    x_seq = []\n",
     "    gaps = []\n",
-    "    gap = Inf\n",
+    "    gap = tol + 1\n",
     "    x_new = x\n",
+    "    j = 0\n",
     "    while (gap > tol) \n",
+    "        j += 1\n",
+    "        @printf \"Newton %d \\n\" j\n",
     "        x_new, gap = Newton(t, x_new, f, grad, hess)\n",
+    "        println(gap)\n",
     "        push!(x_seq, x_new)\n",
     "        push!(gaps, gap)\n",
+    "        plot(gaps)\n",
+    "        plot(x_seq)\n",
     "    end\n",
     "    return x_seq\n",
     "end"
@@ -215,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -227,25 +233,25 @@
        "barr_method (generic function with 2 methods)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function barr_method(Q, p, A, b, x_0, mu, tol=10^(-3.))\n",
-    "    x = x_0\n",
+    "    x_sol = x_0\n",
     "    m = size(x_0,1)\n",
     "    t = 1\n",
     "    gaps = []\n",
-    "    while true        \n",
+    "    k = 0\n",
+    "    while size(x_sol,1)/t > tol   \n",
+    "        k+= 1\n",
+    "        @printf \"Barrier %d \\n\" k\n",
     "        push!(gaps, m/t)\n",
-    "        x = centering_step(Q, p, A, b, x, t, tol)\n",
+    "        x_sol = centering_step(Q, p, A, b, x_sol, t, tol)\n",
+    "        println(x)\n",
     "        t = mu * t\n",
-    "        if m/t < tol\n",
-    "            x_sol = x\n",
-    "            break\n",
-    "        end\n",
     "    end\n",
     "    plot(gaps)\n",
     "    return x_sol, x_seq\n",
@@ -254,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +271,7 @@
        "SVM_primal (generic function with 2 methods)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +299,7 @@
        "SVM_dual (generic function with 2 methods)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,30 +315,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Barrier 1 \n",
+      "Newton 1 \n",
+      "128.2568023804267\n",
+      "Newton 2 \n",
+      "97.01984916653485\n",
+      "Newton 3 \n",
+      "72.87817077054714\n",
+      "Newton 4 \n",
+      "53.91539803538399\n",
+      "Newton 5 \n",
+      "38.645046405475156\n",
+      "Newton 6 \n",
+      "25.276358432652202\n",
+      "Newton 7 \n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: DomainError:\nlog will only return a complex result if called with a complex argument. Try log(complex(x)).\nwhile loading In[39], in expression starting on line 3",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: DomainError:\nlog will only return a complex result if called with a complex argument. Try log(complex(x)).\nwhile loading In[39], in expression starting on line 3",
+      "",
+      " in log at ./operators.jl:381",
+      " in f at ./In[30]:3",
+      " in backtracking at ./In[29]:19",
+      " in Newton at ./In[29]:6"
+     ]
+    }
+   ],
    "source": [
     "X,y = generate_data(20,20)\n",
     "C = .5\n",
-    "SVM_primal(X,y,C)"
+    "SVM_dual(X,y,C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -340,10 +371,10 @@
     {
      "data": {
       "text/plain": [
-       "197.40575106517804"
+       "194.2629884365905"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
