--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -46,8 +46,8 @@
    "source": [
     "function generate_data(n1, n2, d=2)\n",
     "    # Returns 2 clouds of labelled Gaussian data of dim 2 with different moments\n",
-    "    model1 = MvNormal(-ones(d), .5 * eye(d))\n",
-    "    model2 = MvNormal(ones(d), .5 * eye(d))\n",
+    "    model1 = MvNormal(-50*ones(d), .5 * eye(d))\n",
+    "    model2 = MvNormal(50*ones(d), .5 * eye(d))\n",
     "    samples1 = rand(model1, n1)\n",
     "    samples2 = rand(model2, n2)\n",
     "    X = DataFrame([transpose(samples1); transpose(samples2)])\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
        "transform_svm_primal (generic function with 2 methods)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +86,8 @@
     "    p[d+1:d+n] = [C for _ in 1:n]\n",
     "    Y = diagm(y[:Label])\n",
     "    A = zeros(n, d+n)\n",
-    "    A[1:n, d+1:d+n] = -eye(n)\n",
     "    A[1:n,1:d] = - Y*Array(X)\n",
+    "    A[1:n, d+1:d+n] = -eye(n)\n",
     "    b = -ones(n)\n",
     "    return Q, p, A, b\n",
     "end"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
        "transform_svm_dual (generic function with 2 methods)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -136,26 +136,15 @@
     {
      "data": {
       "text/plain": [
-       "backtracking (generic function with 1 method)"
+       "Newton (generic function with 1 method)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function Newton(t, x, f, grad, hess)\n",
-    "    invHess = pinv(hess(x,t)) \n",
-    "    nabla = grad(x,t)\n",
-    "    dx = - invHess * nabla\n",
-    "    lam2 = - transpose(dx) * nabla\n",
-    "    backtrack_t = backtracking(x, t, dx, f, nabla)\n",
-    "    x_new = x + backtrack_t*dx\n",
-    "    gap = lam2/2\n",
-    "    return x_new, gap[1]\n",
-    "end\n",
-    "\n",
     "function backtracking(x, t, dx, f, nabla)\n",
     "    alpha = .25 \n",
     "    beta = .5\n",
@@ -167,12 +156,23 @@
     "        res *= beta\n",
     "    end\n",
     "    return res\n",
-    "end"
+    "end\n",
+    "\n",
+    "function Newton(t, x, f, grad, hess)\n",
+    "    invHess = inv(hess(x,t))\n",
+    "    nabla = grad(x,t)\n",
+    "    dx = - invHess * nabla\n",
+    "    lam2 = - transpose(dx) * nabla\n",
+    "    backtrack_t = backtracking(x, t, dx, f, nabla)\n",
+    "    x_new = x + backtrack_t*dx\n",
+    "    gap = lam2/2\n",
+    "    return x_new, gap[1]\n",
+    "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -184,7 +184,7 @@
        "centering_step (generic function with 3 methods)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,26 +202,29 @@
     "    end\n",
     "    x_seq = []\n",
     "    gaps = []\n",
+    "    obj_vals = []\n",
     "    gap = tol + 1\n",
     "    x_new = x\n",
     "    j = 0\n",
-    "    while (gap > tol) \n",
+    "    while (gap > tol)\n",
     "        j += 1\n",
     "        @printf \"Newton %d \\n\" j\n",
     "        x_new, gap = Newton(t, x_new, f, grad, hess)\n",
-    "        println(gap)\n",
     "        push!(x_seq, x_new)\n",
     "        push!(gaps, gap)\n",
-    "        plot(gaps)\n",
-    "        plot(x_seq)\n",
+    "        push!(obj_vals, f(x_new,t))\n",
+    "        #plot(gaps)\n",
+    "        #plot(x_seq)\n",
+    "        #plot(obj_vals)\n",
     "    end\n",
+    "    println(gap)\n",
     "    return x_seq\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -233,7 +236,7 @@
        "barr_method (generic function with 2 methods)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,18 +252,17 @@
     "        k+= 1\n",
     "        @printf \"Barrier %d \\n\" k\n",
     "        push!(gaps, m/t)\n",
-    "        x_sol = centering_step(Q, p, A, b, x_sol, t, tol)\n",
-    "        println(x)\n",
+    "        x_sol = centering_step(Q, p, A, b, x_sol, t, tol)[end]\n",
     "        t = mu * t\n",
     "    end\n",
-    "    plot(gaps)\n",
+    "    #plot(gaps)\n",
     "    return x_sol, x_seq\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +273,7 @@
        "SVM_primal (generic function with 2 methods)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +301,7 @@
        "SVM_dual (generic function with 2 methods)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,10 +317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -327,38 +329,38 @@
      "text": [
       "Barrier 1 \n",
       "Newton 1 \n",
-      "128.2568023804267\n",
       "Newton 2 \n",
-      "97.01984916653485\n",
+      "-2.1831515535518926e8\n",
+      "Barrier 2 \n",
+      "Newton 1 \n",
+      "Newton 2 \n",
       "Newton 3 \n",
-      "72.87817077054714\n",
       "Newton 4 \n",
-      "53.91539803538399\n",
-      "Newton 5 \n",
-      "38.645046405475156\n",
-      "Newton 6 \n",
-      "25.276358432652202\n",
-      "Newton 7 \n"
+      "-695072.1756717279\n",
+      "Barrier 3 \n",
+      "Newton 1 \n",
+      "Newton 2 \n",
+      "-4.9694854684632486e8\n",
+      "Barrier 4 \n",
+      "Newton 1 \n",
+      "Newton 2 \n"
      ]
     },
     {
      "ename": "LoadError",
-     "evalue": "LoadError: DomainError:\nlog will only return a complex result if called with a complex argument. Try log(complex(x)).\nwhile loading In[39], in expression starting on line 3",
+     "evalue": "LoadError: InterruptException:\nwhile loading In[10], in expression starting on line 3",
      "output_type": "error",
      "traceback": [
-      "LoadError: DomainError:\nlog will only return a complex result if called with a complex argument. Try log(complex(x)).\nwhile loading In[39], in expression starting on line 3",
+      "LoadError: InterruptException:\nwhile loading In[10], in expression starting on line 3",
       "",
-      " in log at ./operators.jl:381",
-      " in f at ./In[30]:3",
-      " in backtracking at ./In[29]:19",
-      " in Newton at ./In[29]:6"
+      " in gemm! at ./linalg/blas.jl:633"
      ]
     }
    ],
    "source": [
-    "X,y = generate_data(20,20)\n",
+    "X,y = generate_data(10,10)\n",
     "C = .5\n",
-    "SVM_dual(X,y,C)"
+    "SVM_primal(X,y,C)"
    ]
   },
   {
@@ -371,7 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "194.2629884365905"
+       "503576.38178786007"
       ]
      },
      "execution_count": 11,
